--- a/Code/WpfBDLab2.csproj
+++ b/Code/WpfBDLab2.csproj
@@ -95,11 +95,15 @@
     <Compile Include="DataConvertor\ListConvertor.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="VM\BaseVM\BaseVM.cs" />
-    <Compile Include="VM\Forms\CitiesFormVM.cs" />
+    <Compile Include="VM\Forms\Cities\CitiesFormVM.cs" />
+    <Compile Include="VM\Forms\Cities\CityAddFormVM.cs" />
     <Compile Include="VM\MainFormVM\MainFormVM.cs" />
     <Compile Include="VM\RelayCommand\RelayCommand.cs" />
-    <Compile Include="Windows\CitiesWindow.xaml.cs">
+    <Compile Include="Windows\Cities\CitiesWindow.xaml.cs">
       <DependentUpon>CitiesWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Cities\CityAddWindow.xaml.cs">
+      <DependentUpon>CityAddWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -113,7 +117,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Windows\CitiesWindow.xaml">
+    <Page Include="Windows\Cities\CitiesWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Cities\CityAddWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
